implement getUsers REST method, add unique constraint for User email
