# src/main/java/ru/valkov/calendarapp/user/UserController.java
@@ -5,6 +5,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import ru.valkov.calendarapp.openapi.controller.UsersApi;
 import ru.valkov.calendarapp.openapi.model.UserRequest;
+import ru.valkov.calendarapp.openapi.model.UserResponse;
+
+import java.util.List;
 
 @RequiredArgsConstructor
 @Controller
@@ -14,5 +17,10 @@ public class UserController implements UsersApi {
     @Override
     public ResponseEntity<Object> createUser(UserRequest userRequest) {
         return ResponseEntity.ok(userService.createUser(userRequest));
+    }
+
+    @Override
+    public ResponseEntity<List<UserResponse>> getUsers() {
+        return ResponseEntity.ok(userService.getUsers());
     }
 }
